[B]Version 1.0.3[/B]
- Updated to danishaddons module 1.1.0
- Use script.module.feedparser
- Handle except due to feedparser 'bozo' content

[B]Version 1.0.2[/B]
- Fixed clip duration
- Fixed various errors parsing clip information

[B]Version 1.0.1[/B]
- Changed plugin ID to plugin.video.dr.dk.podcast
- Now uses libary module for Danish addons

[B]Version 1.0.0[/B]
- Initial version