@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<project version="4">
+  <component name="ProjectModuleManager">
+    <modules>
+      <module fileurl="file://$PROJECT_DIR$/.idea/plugin.video.dr.dk.podcast.iml" filepath="$PROJECT_DIR$/.idea/plugin.video.dr.dk.podcast.iml" />
+    </modules>
+  </component>
+</project>
+
