@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
 	id="plugin.video.dr.dk.podcast"
-	version="1.0.3"
+	version="1.1.0"
 	name="DR.dk Video Podcasts"
 	provider-name="twinther [tommy@winther.nu]">
 	<requires>
 		<import addon="xbmc.python" version="1.0"/>
-		<import addon="script.module.danishaddons" version="1.1.0"/>
-        <import addon="script.module.feedparser" version="4.1"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
-		<provides>video</provides>
+        <provides>video</provides>
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<summary lang="en">Watch and listen to DRs programming whenever you want</summary>
