@@ -1,4 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<strings>
-	<string id="30001">Indlæser progammer...</string>
-</strings>
